--- a/src/pages/golang.astro
+++ b/src/pages/golang.astro
@@ -7,7 +7,7 @@ import Tabs from "./Tabs";
 import supportedLanguages from "../config";
 
 function returnValidLang(): string {
-  const lang = navigator.language.split("-")[0];
+  const lang = "en";
   if (supportedLanguages.includes(lang)) return lang;
   else return "en";
 }
