Hotfix: Change style box and fix padding mobile

--- a/src/components/CardProjectBackend.astro
+++ b/src/components/CardProjectBackend.astro
@@ -36,7 +36,7 @@ const {
 </div>
 
 <div
-  class="p-10 gap-8 items-stretch grid lg:grid-cols-2 grid-cols-1 bg-gray-900/60 border border-orange-600/50 hover:border-orange-600 rounded-ss-xl rounded-ee-xl"
+  class="lg:p-10 p-6 gap-8 items-stretch grid lg:grid-cols-2 grid-cols-1 bg-gray-900/60 border border-orange-600/50 hover:border-orange-600 rounded-ss-xl rounded-ee-xl"
 >
   <div class="font-normal text-2xl">Description</div>
   <div class="font-normal text-2xl lg:block hidden">Features</div>
