Hotfix: Change font-size and text position

--- a/src/components/CardProjectBackend.astro
+++ b/src/components/CardProjectBackend.astro
@@ -25,7 +25,7 @@ const {
   <div class="w-full text-xl font-light flex items-center">
     <a href={url} class="flex items-center">
       <div
-        class="tracking-wider text-2xl text-right text-white py-1 flex items-center gap-1 hover:text-orange-500"
+        class="tracking-wider lg:text-2xl text-xl text-white py-1 flex items-center lg:gap-1 gap-2 hover:text-orange-500"
       >
         <Icon name="mdi:book-multiple" class="" />
         {name}
